fix(coupons): correct activation filtering, exit codes and error contract; enforce coverage
Correctness
  * Coupon parsing aborted the whole Supercard run when a coupon carried a
    missing or malformed endDate -- a field that was parsed and then never read.
    Dropped it, along with isNew/isRecommendation/hasLogoProduct, which were
    also parsed and never read.
  * The non-2xx branches in the Supercard service were unreachable: RestClient's
    default status handler raises before the status can be inspected, so those
    checks only looked like error handling. Removed; the 200-OK-but-HTML checks,
    which are reachable and catch a DataDome challenge page, stay.
  * A one-shot run always exited 0, so cron and restart: on-failure could not
    distinguish a completed activation from a failed login. ActivationExitCode
    now reports authentication failure as exit 1. Coupon-level failures stay
    exit 0: coupons expire and are withdrawn between runs.
  * The Cumulus service rebuilt the cookie header and re-extracted the CSRF
    token for every coupon in the batch; both are constant for the run.
  * CumulusCouponService resolved configuration in its constructor to set a base
    URL that was never used -- every Cumulus endpoint is configured absolute.

Configuration
  * Credentials were @NotBlank, so the context failed to start unless BOTH
    retailers were configured, which made the documented "disable one retailer"
    switch impossible to use. They are now optional and reported as a failed
    authentication with an actionable message; @Email still validates a value
    that is present.
  * The Supercard activation limit (20), shop channel ("retail") and discount
    marker ("5 Rappen") were hard-coded in the middle of the filter expression.
    They are configuration now, and the filter reads as prose.

API
  * ActivationController returned ResponseEntity<?> with JSON on success and
    bare strings on error. It now returns ActivationOutcome and raises
   